--- a/reservation/templates/base.html
+++ b/reservation/templates/base.html
@@ -39,7 +39,7 @@
                         {% if user.is_authenticated %}
                         <!--Clinic Staff Link-->
                         <li class="nav-item">
-                            <a class="nav-link active cHover" href="{% url 'mybookings' %}">My booknings</a>
+                            <a class="nav-link active cHover" href="#">My booknings</a>
                         </li> 
                         <li class="nav-item dropdown me-3 fs-5">
                             <a class="nav-link active dropdown-toggle cHover" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
